--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "author": "Adam Bourn",
-  "homepage": "abourn.github.io/portfolio",
+  "homepage": "https://abourn.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
